# password_manager

./: Cargo.toml  README.md  passwords.db
src/: main.rs
