[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
age = "0.9"
hmac = "0.12"
sha2 = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.6"
dialoguer = "0.10"
console = "0.15"
